--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "ZHANG Yutian Personal Homepage"
+title                    : "Personal Homepage"
 title_separator          : "-"
 name                     : &name "ZHANG Yutian"
 description              : &description "personal description"
