--- a/_config.yml
+++ b/_config.yml
@@ -25,10 +25,10 @@ author:
   name             : "Your Sidebar Name"
   pronouns         : # example: "she/her"  
   bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  location         : "Beijing, China"
+  employer         : "Undergraduate student in China University of Petroleum-Beijing"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "yt.zhang.stu@outlook.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
