--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : # example: "she/her"  
   bio              : "Will is power."
   location         : "Beijing, China"
-  employer         : "China University of Petroleum-Beijing"
+  employer         : "China University of Petroleum"
   uri              : # URL
   email            : "yt.zhang.stu@outlook.com" 
 
